# yak

./: LICENSE  pyproject.toml  pytest.ini  test_json_schema_format.py  test_openrouter_response_format.py  test_response_format.py  test_response_format_async.py  validate_json_schema_format.py
examples/: README_MLX_FUNCTION_CALLING.md  mlx_function_calling_async_example.py  mlx_function_calling_example.py
notebooks/: explore.ipynb  mlx_example.ipynb
src/yak/: __init__.py  core.py  utils.py
src/yak/providers/: __init__.py  anthropic.py  base.py  local.py  mlx.py  openai.py  openrouter.py
tests/: README.md  conftest.py  test_core.py  test_integration.py  test_openrouter_tool_calling.py  test_providers.py  test_utils.py
