[project]
name = "yak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Robert Laabs", email = "robert@rlaabs.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "mlx-lm>=0.24.1",
    "openai>=1.82.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
