[project]
name = "yak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Robert Laabs", email = "robert@rlaabs.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "mlx-lm>=0.24.1",
    "openai>=1.82.1",
    "sentencepiece",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.0.0",
    "pydantic>=2.0.0",  # For testing structured responses
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
sentencepiece = { url = "https://github.com/rlaabs/sentencepiece/releases/download/0.2.1/sentencepiece-0.2.1-cp313-cp313-macosx_11_0_arm64.whl" }

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-xdist>=3.8.0",
]
